--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,8 @@
-* text=auto eol=lf
+* text eol=lf
 
 # Denote all files that are truly binary and should not be modified
 *.ttf binary
 *.png binary
 *.webp binary
 *.woff binary
-
 
